<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"


            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <!--    Team name view  -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/team_a"
                    android:textColor="#616161"
                    android:textSize="14sp" />
                <!--    Team score view  -->
                <TextView
                    android:id="@+id/Team_A_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:text="@string/score"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:onClick="threePointerForTeamA"
                    android:text="@string/three_pt"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"

                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:onClick="twoPointerForTeamA"
                    android:text="@string/two_pt"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:onClick="freeThrowForTeamA"
                    android:text="@string/free"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp" />


            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#878585"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <!--    Team name view  -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/team_b"
                    android:textSize="14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"
                    android:padding="16dp" />
                <!--    Team score view  -->
                <TextView
                    android:id="@+id/Team_B_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:text="@string/score"
                    android:textColor="@color/black"
                    android:textSize="56sp"
                    android:fontFamily="sans-serif-light"

                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:onClick="threePointerForTeamB"
                    android:text="@string/three_pt"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:onClick="twoPointerForTeamB"
                    android:text="@string/two_pt"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:onClick="freeThrowForTeamB"
                    android:text="@string/free"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp" />


            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/primary"
            android:onClick="reset"
            android:text="@string/reset"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:layout_centerInParent="true" />

    </RelativeLayout>
</layout>
